--- a/app/src/main/res/layout/fragment_entry_form.xml
+++ b/app/src/main/res/layout/fragment_entry_form.xml
@@ -722,8 +722,8 @@
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:ems="3"
+                    android:inputType="numberDecimal"
+                    android:ems="4"
                     android:id="@+id/txt_duration" />
 
             </LinearLayout>
