--- a/app/src/main/res/layout/fragment_entry_form.xml
+++ b/app/src/main/res/layout/fragment_entry_form.xml
@@ -209,6 +209,32 @@
 
             <TextView
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:gravity="center_vertical"
+                android:text="@string/drugs_taken" />
+
+            <EditText
+                android:id="@+id/txt_drugs_taken"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:gravity="center_vertical"
+                android:text="@string/approximate_time_drugs_taken" />
+
+            <EditText
+                android:id="@+id/txt_approximate_time_drugs_taken"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical" />
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:gravity="center_vertical"
